GearsetPOC/force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Reliability Incident</label>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Incident No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reliability Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>