GearsetPOC/force-app/main/default/objects/Incident__c/fields/Add_to_Improvement_Plans__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Improvement_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if an improvement plan is required</description>
    <inlineHelpText>tick if an improvement plan is required</inlineHelpText>
    <label>Add to Improvement Plans</label>
    <type>Checkbox</type>
</CustomField>