GearsetPOC/force-app/main/default/objects/Incident__c/fields/Aff_Trailing_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Aff_Trailing_Vehicle__c</fullName>
    <inlineHelpText>select the vehicle which is affected by the incident, leave N/A if fault is on other half set</inlineHelpText>
    <label>Affected Trailing Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fleet__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R5</fullName>
            </value>
            <value>
                <fullName>R6</fullName>
            </value>
            <value>
                <fullName>R7</fullName>
            </value>
            <value>
                <fullName>R8</fullName>
            </value>
            <value>
                <fullName>R9</fullName>
            </value>
            <value>
                <fullName>EC01</fullName>
            </value>
            <value>
                <fullName>TC02</fullName>
            </value>
            <value>
                <fullName>CC03</fullName>
            </value>
            <value>
                <fullName>MC04</fullName>
            </value>
            <value>
                <fullName>MC05</fullName>
            </value>
            <value>
                <fullName>CC06</fullName>
            </value>
            <value>
                <fullName>TC07</fullName>
            </value>
            <value>
                <fullName>CC08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>