GearsetPOC/force-app/main/default/objects/Incident__c/fields/Avoidable__c.field-meta.xml
<CustomField>
    <fullName>Avoidable__c</fullName>
    <description>select the reason for the failure being avoided</description>
    <inlineHelpText>select the reason for the failure being avoided</inlineHelpText>
    <label>Avoidable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Repeat fault code following previous intervention</fullName>
            </value>
            <value>
                <fullName>Repeat fault code no intervention</fullName>
            </value>
            <value>
                <fullName>Repeat incident following previous investigation</fullName>
            </value>
            <value>
                <fullName>Repeat incident no intervention</fullName>
            </value>
            <value>
                <fullName>Non quality process</fullName>
            </value>
            <value>
                <fullName>Non quality maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>