GearsetPOC/force-app/main/default/objects/Incident__c/fields/Avoidable_old__c.field-meta.xml
<CustomField>
    <fullName>Avoidable_old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To mention whether the incident was avoidable or not</description>
    <inlineHelpText>tick if the incident could have been avoided</inlineHelpText>
    <label>Avoidable_old</label>
    <type>Checkbox</type>
</CustomField>