GearsetPOC/force-app/main/default/objects/Incident__c/fields/Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closure_Comments__c</fullName>
    <inlineHelpText>keep closure comments short and relevant</inlineHelpText>
    <label>Closure Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>