GearsetPOC/force-app/main/default/objects/Incident__c/fields/Crew_Report_Reqd__c.field-meta.xml
<CustomField>
    <fullName>Crew_Report_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if a crew report is required (will automatically generate a request from the operations REX team)</inlineHelpText>
    <label>Crew Report Reqd</label>
    <type>Checkbox</type>
</CustomField>