GearsetPOC/force-app/main/default/objects/Incident__c/fields/Crew_Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>Crew_Report_Summary__c</fullName>
    <inlineHelpText>summarise any crew reports received here.</inlineHelpText>
    <label>Crew Report Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>