GearsetPOC/force-app/main/default/objects/Incident__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <inlineHelpText>defaults to the date that status &#39;closed&#39; was selected</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>