GearsetPOC/force-app/main/default/objects/Incident__c/fields/Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>insert the number of delay minutes attributed to rolling stock by CRE for the incident</inlineHelpText>
    <label>Delay Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>