GearsetPOC/force-app/main/default/objects/Incident__c/fields/Diagram__c.field-meta.xml
<CustomField>
    <fullName>Diagram__c</fullName>
    <inlineHelpText>the diagram on which the train was running at the time of the incident</inlineHelpText>
    <label>Diagram</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>