GearsetPOC/force-app/main/default/objects/Incident__c/fields/Discuss_OIP__c.field-meta.xml
<CustomField>
    <fullName>Discuss_OIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if the incident is to be discussed @ oip meeting</description>
    <inlineHelpText>tick if the incident is to be discussed @ oip meeting</inlineHelpText>
    <label>Discuss @ OIP</label>
    <type>Checkbox</type>
</CustomField>