GearsetPOC/force-app/main/default/objects/Incident__c/fields/e320_Picklist__c.field-meta.xml
<CustomField>
    <fullName>e320_Picklist__c</fullName>
    <inlineHelpText>select the systems from which a download has been atkena dn analysed as part of the incident</inlineHelpText>
    <label>e320 D&#39;L Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCU</fullName>
            </value>
            <value>
                <fullName>BCU</fullName>
            </value>
            <value>
                <fullName>ACU</fullName>
            </value>
            <value>
                <fullName>TCU</fullName>
            </value>
            <value>
                <fullName>ATESS</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>PIS</fullName>
            </value>
            <value>
                <fullName>Infotainment</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>