GearsetPOC/force-app/main/default/objects/Incident__c/fields/EIL_Attribution__c.field-meta.xml
<CustomField>
    <fullName>EIL_Attribution__c</fullName>
    <inlineHelpText>select the agreed EIL attribution option</inlineHelpText>
    <label>EIL Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Contested</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>