GearsetPOC/force-app/main/default/objects/Incident__c/fields/EIL_Status__c.field-meta.xml
<CustomField>
    <fullName>EIL_Status__c</fullName>
    <inlineHelpText>change the status to reflect the stage of the incident investigation (defaults to &#39;new&#39; when incident created&#39;)</inlineHelpText>
    <label>EIL Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Not an Incident</fullName>
            </value>
            <value>
                <fullName>Knock on Delay</fullName>
            </value>
            <value>
                <fullName>Gathering Data</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Siemens Review</fullName>
            </value>
            <value>
                <fullName>Siemens Query</fullName>
            </value>
            <value>
                <fullName>Siemens Responded</fullName>
            </value>
            <value>
                <fullName>Awaiting Closure</fullName>
            </value>
            <value>
                <fullName>Awaiting Follow Up</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>