GearsetPOC/force-app/main/default/objects/Incident__c/fields/EIL_Summary_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>EIL_Summary_Conclusion__c</fullName>
    <inlineHelpText>keep the summary / conclusion short and to the point.</inlineHelpText>
    <label>EIL Summary / Conclusion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>