GearsetPOC/force-app/main/default/objects/Incident__c/fields/EQX_Work_Reports__c.field-meta.xml
<CustomField>
    <fullName>EQX_Work_Reports__c</fullName>
    <inlineHelpText>insert the the number of any relevant work reports from equinox</inlineHelpText>
    <label>EQX Work Reports</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>