GearsetPOC/force-app/main/default/objects/Incident__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if the incident attribution has been escalated</description>
    <inlineHelpText>tick if the incident attribution has been escalated</inlineHelpText>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>