GearsetPOC/force-app/main/default/objects/Incident__c/fields/ET_Lamp__c.field-meta.xml
<CustomField>
    <fullName>ET_Lamp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the ET lamp has illuminated</inlineHelpText>
    <label>ET Lamp</label>
    <type>Checkbox</type>
</CustomField>