GearsetPOC/force-app/main/default/objects/Incident__c/fields/Exec_Summary__c.field-meta.xml
<CustomField>
    <fullName>Exec_Summary__c</fullName>
    <description>insert short summary of incident (for reporting)</description>
    <inlineHelpText>insert short summary of incident (for reporting)</inlineHelpText>
    <label>Exec Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>