GearsetPOC/force-app/main/default/objects/Incident__c/fields/failure_report_required__c.field-meta.xml
<CustomField>
    <fullName>failure_report_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if a failure report is required from the oem</description>
    <inlineHelpText>tick if a failure report is required from the oem</inlineHelpText>
    <label>Failure report required</label>
    <type>Checkbox</type>
</CustomField>