GearsetPOC/force-app/main/default/objects/Incident__c/fields/Fault_Codes__c.field-meta.xml
<CustomField>
    <fullName>Fault_Codes__c</fullName>
    <inlineHelpText>insert the details of any relevant fault codes logged.</inlineHelpText>
    <label>Fault Codes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>