GearsetPOC/force-app/main/default/objects/Incident__c/fields/Fault_Recreated__c.field-meta.xml
<CustomField>
    <fullName>Fault_Recreated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if able to recreate fault on depot</inlineHelpText>
    <label>Fault Recreated</label>
    <type>Checkbox</type>
</CustomField>