GearsetPOC/force-app/main/default/objects/Incident__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <inlineHelpText>select the fleet on which the incident is to be raised</inlineHelpText>
    <label>Fleet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMST</fullName>
                <color>#A845DC</color>
                <label>TMST</label>
            </value>
            <value>
                <fullName>E300</fullName>
                <color>#F96FB7</color>
                <label>E300</label>
            </value>
            <value>
                <fullName>E320</fullName>
                <color>#0B24BE</color>
                <label>E320</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>