GearsetPOC/force-app/main/default/objects/Incident__c/fields/Follow_Up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Comments__c</fullName>
    <inlineHelpText>insert any specifics for the follow-up actions or comments so far</inlineHelpText>
    <label>Follow Up Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>