GearsetPOC/force-app/main/default/objects/Incident__c/fields/Follow_Up_References__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_References__c</fullName>
    <inlineHelpText>insert the reference for any follow up actions and the person responsbile for actioning them</inlineHelpText>
    <label>Follow Up References</label>
    <type>TextArea</type>
</CustomField>