GearsetPOC/force-app/main/default/objects/Incident__c/fields/Incident_Title__c.field-meta.xml
<CustomField>
    <fullName>Incident_Title__c</fullName>
    <inlineHelpText>keep the title short and relevant to ease future searching</inlineHelpText>
    <label>Incident Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>