GearsetPOC/force-app/main/default/objects/Incident__c/fields/Inform_Siemens__c.field-meta.xml
<CustomField>
    <fullName>Inform_Siemens__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident involves an e320 and requires Siemens involvement (will automatically inform Siemens).</inlineHelpText>
    <label>Inform Siemens</label>
    <type>Checkbox</type>
</CustomField>