GearsetPOC/force-app/main/default/objects/Incident__c/fields/Initial_Report__c.field-meta.xml
<CustomField>
    <fullName>Initial_Report__c</fullName>
    <inlineHelpText>initial details of the incident (usually from CRE)</inlineHelpText>
    <label>Initial Report</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>