GearsetPOC/force-app/main/default/objects/Incident__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>approximate location of the incident (station, PK ref, geographical area)</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>