GearsetPOC/force-app/main/default/objects/Incident__c/fields/Non_Commercial_Failure__c.field-meta.xml
<CustomField>
    <fullName>Non_Commercial_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident occurred on a train not in commercial service (eg ECS move, test / endurance run)</inlineHelpText>
    <label>Non Commercial Failure</label>
    <type>Checkbox</type>
</CustomField>