GearsetPOC/force-app/main/default/objects/Incident__c/fields/Ops_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Ops_Infrastructure__c</fullName>
    <label>Ops / Infrastructure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>