GearsetPOC/force-app/main/default/objects/Incident__c/fields/Parent_Incident_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Incident_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>if the incident is a consequence of another insert the original incient reference here</inlineHelpText>
    <label>Parent Incident No</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Incident__c.Id</valueField>
        </filterItems>
        <infoMessage>Select the Incident that is the Primary</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Reliability Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>