GearsetPOC/force-app/main/default/objects/Incident__c/fields/Primary_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Code__c</fullName>
    <inlineHelpText>select the most relevant primary system code.</inlineHelpText>
    <label>Primary Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
                <default>true</default>
                <label>n/a</label>
            </value>
            <value>
                <fullName>A - Air Production</fullName>
            </value>
            <value>
                <fullName>B - Brakes</fullName>
            </value>
            <value>
                <fullName>C - Car Body</fullName>
            </value>
            <value>
                <fullName>E - Auxiliary Supplies</fullName>
            </value>
            <value>
                <fullName>G - Collector Equipment and Roof Electrical</fullName>
            </value>
            <value>
                <fullName>H - Heating and Air Conditioning</fullName>
            </value>
            <value>
                <fullName>I - Interiors</fullName>
            </value>
            <value>
                <fullName>J - Cab</fullName>
            </value>
            <value>
                <fullName>K - Catering Equipment</fullName>
            </value>
            <value>
                <fullName>M - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>N - Train Control</fullName>
            </value>
            <value>
                <fullName>O - Doors</fullName>
            </value>
            <value>
                <fullName>P - Electric Traction and Power Equipment</fullName>
            </value>
            <value>
                <fullName>S - Safety Systems</fullName>
            </value>
            <value>
                <fullName>T - Transmission</fullName>
            </value>
            <value>
                <fullName>U - Underframe, Bogies and Couplers</fullName>
            </value>
            <value>
                <fullName>W - Water and Toilet Systems</fullName>
            </value>
            <value>
                <fullName>X - Communication and Information Systems</fullName>
            </value>
            <value>
                <fullName>Z - Fire and Emergency Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>