GearsetPOC/force-app/main/default/objects/Incident__c/fields/Reasonable_Time__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Time__c</fullName>
    <inlineHelpText>select the relevant statement relating to respect of the 7-day rule</inlineHelpText>
    <label>Reasonable Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreed within 7 days</fullName>
            </value>
            <value>
                <fullName>Over 7 days (accepted by EIL)</fullName>
            </value>
            <value>
                <fullName>Over 7 days (no response)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>