GearsetPOC/force-app/main/default/objects/Incident__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if the incident allocaton is rejected by siemens</description>
    <inlineHelpText>tick if the incident allocaton is rejected by siemens</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>