GearsetPOC/force-app/main/default/objects/Incident__c/fields/Remedial_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Remedial_Action_Taken__c</fullName>
    <inlineHelpText>summarise any remedial action that has already been taken in relation to the fault.</inlineHelpText>
    <label>Remedial Action Taken</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>