GearsetPOC/force-app/main/default/objects/Incident__c/fields/Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Report_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick if the incident requires a report from siemens</description>
    <inlineHelpText>tick if the incident requires a report from siemens</inlineHelpText>
    <label>Report Required</label>
    <type>Checkbox</type>
</CustomField>