GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Allowable_Failure__c.field-meta.xml
<CustomField>
    <fullName>RI_Allowable_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is classsified as an allowable failure under the performance contract</inlineHelpText>
    <label>Allowable Failure</label>
    <type>Checkbox</type>
</CustomField>