GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Crew_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>RI_Crew_Report_Type__c</fullName>
    <inlineHelpText>select the required crew report type</inlineHelpText>
    <label>Crew Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Train Manager</fullName>
            </value>
            <value>
                <fullName>Driver &amp; Train Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>