GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_E320_Comfort_Failure__c.field-meta.xml
<CustomField>
    <fullName>RI_E320_Comfort_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is a comfort failure</inlineHelpText>
    <label>Comfort Failure (S)</label>
    <type>Checkbox</type>
</CustomField>