GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Late_Availability__c.field-meta.xml
<CustomField>
    <fullName>RI_Late_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is counted as a late availability failure</inlineHelpText>
    <label>Late Availability</label>
    <type>Checkbox</type>
</CustomField>