GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Mission_Failure__c.field-meta.xml
<CustomField>
    <fullName>RI_Mission_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is counted as a mission failure</inlineHelpText>
    <label>Mission Failure</label>
    <type>Checkbox</type>
</CustomField>