GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Non_availability__c.field-meta.xml
<CustomField>
    <fullName>RI_Non_availability__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is counted as a non-availability failure</inlineHelpText>
    <label>Non-availability</label>
    <type>Checkbox</type>
</CustomField>