GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Performance_Regime_Trigger__c.field-meta.xml
<CustomField>
    <fullName>RI_Performance_Regime_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident triggers the Siemens performance contract</inlineHelpText>
    <label>Performance Regime Trigger</label>
    <type>Checkbox</type>
</CustomField>