GearsetPOC/force-app/main/default/objects/Incident__c/fields/RI_Reliability_Failure__c.field-meta.xml
<CustomField>
    <fullName>RI_Reliability_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident is counted as a reliability failure</inlineHelpText>
    <label>Reliability Failure</label>
    <type>Checkbox</type>
</CustomField>